# es-sector-updater

./: Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: rust-clippy.yml
src/: main.rs
