[package]
name = "es-sector-updater"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempfile = "3"
zip = "0.6.3"
regex = "1.7.0"